# luma-desktop

./: .gitignore  README.md  package.json  rust-toolchain.toml
.github/workflows/: build.yml
sidecar/: package.json  pnpm-lock.yaml
sidecar/src/: index.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: check_claude_auth.toml  check_claude_installed.toml  clear_luma_token.toml  confirm_action.toml  confirm_invoice.toml  get_app_version.toml  get_platform.toml  has_luma_token.toml  history_delete.toml  history_list.toml  history_load.toml  history_save.toml  respond_confirm.toml  send_message.toml  start_agent_session.toml  stop_agent_session.toml  store_luma_token.toml
src-tauri/src/: lib.rs  main.rs  overlay.js
src-tauri/src/commands/: agent.rs  claude.rs  credentials.rs  dialog.rs  history.rs  mod.rs  platform.rs
