[package]
name = "luma-desktop"
version = "0.1.13"
description = "LUMA Desktop"
authors = ["Way To Grow"]
edition = "2021"
rust-version = "1.77"

# The library that main.rs delegates to (Tauri 2.0 layout, mobile-ready).
[lib]
name = "luma_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Auto-update: check GitHub Releases, prompt with a native dialog, install, relaunch.
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
